# libretro_core_rom

./: CMakeLists.txt  README.md  build.bat
src/: hello_world_core.c  miniz_unzip.c
